# reink-rust

./: CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md
.github/: copilot-instructions.md  dependabot.yml
.github/workflows/: ci.yml  release.yml
crates/reink-app/: Cargo.toml
crates/reink-app/src/: lib.rs
crates/reink-cli/: Cargo.toml
crates/reink-cli/src/: main.rs  offline.rs  tests.rs
crates/reink-core/: Cargo.toml
crates/reink-core/assets/: epson.toml
crates/reink-core/src/: command.rs  controller.rs  epson.rs  identity.rs  lib.rs
crates/reink-d4/: Cargo.toml
crates/reink-d4/src/: lib.rs  link.rs  packet.rs  transaction.rs
crates/reink-discovery/: Cargo.toml
crates/reink-discovery/src/: device_file.rs  lib.rs
crates/reink-gui/: Cargo.toml
crates/reink-gui/src/: lib.rs  main.rs  tests.rs  view_helpers.rs
crates/reink-hardware-test/: Cargo.toml
crates/reink-hardware-test/src/: evidence_files.rs  main.rs  tests.rs
crates/reink-platform/: Cargo.toml
crates/reink-platform-test/: Cargo.toml
crates/reink-platform-test/src/: control.rs  discovery.rs  lib.rs  transcript.rs  transport.rs
crates/reink-platform/src/: control.rs  device.rs  discovery.rs  error.rs  lib.rs  transport.rs
crates/reink-snmp/: Cargo.toml
crates/reink-snmp/src/: lib.rs
crates/reink-tui/: Cargo.toml
crates/reink-tui/src/: main.rs
crates/reink-usb/: Cargo.toml
crates/reink-usb/src/: adapter.rs  descriptor.rs  lib.rs  linux.rs  native.rs  selection.rs  windows_native.rs
docs/: ARCHITECTURE.md  HARDWARE_CAPTURE_GUIDE.md  LINUX_USB_READONLY_COMMANDS.txt  MAINTAINING.md  PLATFORM_CAPABILITIES.md  PROTOCOL_PROVENANCE.md  UI_DESIGN.md
