[package]
name = "reink-app"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Application services that compose ReInk protocol layers"

[dependencies]
reink-core = { path = "../reink-core" }
reink-d4 = { path = "../reink-d4" }
reink-platform = { path = "../reink-platform" }

[target.'cfg(any(target_os = "linux", target_os = "macos", target_os = "windows"))'.dependencies]
reink-usb = { path = "../reink-usb" }

[dev-dependencies]
reink-platform-test = { path = "../reink-platform-test" }
