[package]
name = "reink-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Command-line interface for ReInk inspection and explicit EEPROM operations"

[dependencies]
clap = { version = "4.6.1", features = ["derive"] }
reink-app = { path = "../reink-app" }
reink-core = { path = "../reink-core" }
reink-discovery = { path = "../reink-discovery" }
reink-platform = { path = "../reink-platform" }
reink-snmp = { path = "../reink-snmp" }
reink-usb = { path = "../reink-usb" }
serde_json = "1.0"
