[package]
name = "reink-gui"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Read-only graphical user interface for ReInk"

[dependencies]
eframe = "0.35"
regex = "1.11"
reink-app = { path = "../reink-app" }
reink-core = { path = "../reink-core" }
reink-platform = { path = "../reink-platform" }
rfd = "0.15"

[target.'cfg(any(target_os = "linux", target_os = "macos"))'.dependencies]
reink-usb = { path = "../reink-usb" }
