[package]
name = "reink-gui"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Guarded graphical user interface for ReInk"

[dependencies]
eframe = "0.35"
regex = "1.11"
reink-app = { path = "../reink-app" }
reink-core = { path = "../reink-core" }
reink-d4 = { path = "../reink-d4" }
reink-platform = { path = "../reink-platform" }
rfd = "0.15"

[target.'cfg(any(target_os = "linux", target_os = "macos", target_os = "windows"))'.dependencies]
reink-usb = { path = "../reink-usb" }
