[package]
name = "reink-hardware-test"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Opt-in read-only hardware validation driver for ReInk"

[dependencies]
clap = { version = "4.6.1", features = ["derive"] }
reink-core = { path = "../reink-core" }
reink-platform = { path = "../reink-platform" }
reink-usb = { path = "../reink-usb" }
serde_json = "1.0"
