[package]
name = "reink-hardware-test"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Opt-in ReInk hardware validation and reversible write-evidence driver"

[dependencies]
clap = { version = "4.6.1", features = ["derive"] }
reink-app = { path = "../reink-app" }
reink-core = { path = "../reink-core" }
reink-platform = { path = "../reink-platform" }
reink-usb = { path = "../reink-usb" }
serde_json = "1.0"
