[package]
name = "reink-platform-test"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Deterministic test doubles for ReInk platform contracts"

[dependencies]
reink-platform = { path = "../reink-platform" }
