[package]
name = "reink-tui"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Read-only terminal user interface for ReInk"

[dependencies]
crossterm = "0.28"
ratatui = "0.30"
reink-core = { path = "../reink-core" }
