[package]
name = "reink-usb"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Read-only Linux and macOS libusb transport for ReInk printer interfaces"

[dependencies]
reink-platform = { path = "../reink-platform" }

[target.'cfg(target_os = "linux")'.dependencies]
rusb = "0.9"

[target.'cfg(target_os = "macos")'.dependencies]
rusb = { version = "0.9", features = ["vendored"] }
