[package]
name = "reink-usb"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Cross-platform USB transports and Windows stock-driver access for ReInk printer interfaces"

[dependencies]
reink-platform = { path = "../reink-platform" }

[target.'cfg(target_os = "linux")'.dependencies]
rusb = "0.9"

[target.'cfg(target_os = "macos")'.dependencies]
rusb = { version = "0.9", features = ["vendored"] }

[target.'cfg(target_os = "windows")'.dependencies]
rusb = { version = "0.9", features = ["vendored"] }
windows-sys = { version = "0.61", features = [
    "Win32_Devices_DeviceAndDriverInstallation",
    "Win32_Devices_Properties",
    "Win32_Foundation",
    "Win32_Security",
    "Win32_Storage_FileSystem",
    "Win32_System_IO",
    "Win32_System_Registry",
    "Win32_System_Threading",
] }
